--- a/test.css
+++ b/test.css
@@ -1,4 +1,4 @@
-#menu {
+#div_main_menu {
     background-color: #205081;
     width:100%;
     float:left;
@@ -10,22 +10,15 @@
 
 #menu_list  {
     color:white;
-   // display:inline;
-   // float: left;
-    //width: auto;
     list-style:none;
     display:inline-flex;
     margin:10px;
 }
 
-#wix_home {
-//    display: inline;
-}
-
 #menu_list  li {
     padding: 10px;
-    //margin:10px;
 }
+
 #CreateButton {
     background-color: #3b7fc4;
 }
@@ -33,6 +26,55 @@
 #SerchButton {
     background: rgba(0, 0, 0, 0.2);
     color: white;
-    //width: 20%;
-  display: inline-block;
+    display: inline-block;
+}
+
+#footer {
+    color: #707070;
+    background: #f5f5f5;
+    text-align: center;
+    position:absolute;
+    bottom:0;
+    width: 100%;
+
+}
+
+#footer li {
+    display: inline;
+    text-decoration: none;
+    margin:10px;
+
+}
+
+#project_management_software  {
+    margin:1px;
+}
+
+#footer li#jira_version{
+    margin:1px;
+
+}
+
+#footer ul li  a {
+   text-decoration: none;
+   color: #707070;
+}
+
+#footer ul li a:hover {
+    text-decoration: underline;
+    color: inherit;
+
+}
+
+
+#attlasian_link  {
+   text-decoration: none;
+    color: #707070;
+
+}
+
+#footer  a:hover{
+   // text-decoration: none;
+    color: blue;
+
 }
