--- a/test.css
+++ b/test.css
@@ -29,6 +29,83 @@
     display: inline-block;
 }
 
+div#main_divs {
+    margin: 10px;
+}
+
+div#introduction{
+   // margin:0px 0px 0px 20px;
+    border: 1px grey solid;
+//    float:left;
+    display: inline-block;
+
+}
+
+#introduction_img{
+    height: 64px;
+    width: 64px;
+    display: inline-block;;
+}
+
+div#introduction h3 {
+    display: block;
+   vertical-align: top;
+}
+
+
+div#introduction h4{
+    display: block;
+    vertical-align: baseline	;
+}
+
+
+div#favorite_filters{
+  //  margin:0px 0px 0px 20px;
+    border: 1px grey solid;
+    //width: auto;
+    display: inline-block;
+    vertical-align:top;
+
+
+}
+
+#favorite_filters a{
+    text-decoration: none;
+    color: #3b73af;
+}
+
+
+#favorite_filters a:hover{
+    text-decoration: underline;
+//color:red;
+}
+
+div h3 {
+    color: #fff;
+    background-color: #3b7fc4;
+//border: 1px grey solid;
+}
+
+div#assigned_to_me{
+ //   margin:0px 0px 0px 20px;
+    border: 1px grey solid;
+    display:block;
+    //clear: both;
+    width: auto;
+}
+
+div#activity_stream{
+ //   margin:0px 0px 0px 20px;
+    border: 1px grey solid;
+   // clear: both;
+
+}
+div#activity_stream h2 {
+    color: #fff;
+    background-color: #3b7fc4;
+    //border: 1px grey solid;
+}
+
 #footer {
     color: #707070;
     background: #f5f5f5;
