--- a/CV/cv.css
+++ b/CV/cv.css
@@ -1,11 +1,7 @@
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/opensans/v13/K88pR3goAWT7BTt32Z01m4X0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
-
-}
+/* latin */
 
 body {
-    font-family: 'Open Sans';
+    font-family:  'Open Sans', 'Tangerine',sans-serif;
 }
+
+
